fix java warnings